styles/main.css
/*** GLOBAL VARIABLES ***/
:root {
    --color-curious-blue: #1992d4;
    --color-fuel-yellow: #f0b429;
    --color-catskill-white: #e2e8f0;
}

/*** GLOBAL SELECTORS***/
*{
    box-sizing: border-box;
}
body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 14px;
}

ul {
    list-style-type: none;
}

.layout {
    display: grid;
    min-height: 100vh;
    height: max-content;
    grid-template: repeat(5, 1fr) / 1fr 5fr;
}

/******* REUSABLE SELECTORS *********/
.nav__section li, button, a, img {
    cursor: pointer;
}

div[class*='img-wrapper'] {
    background-color: var(--color-catskill-white);
    border-radius: 50%;
}

div[class*='img-wrapper']>img {
    background-size: cover;
    border-radius: 50%;
    width: 100%;
    height: 100%;
}

.img-wrapper--sml {
    width: 45px;
    height: 45px;
}

.img-wrapper--med {
    width: 70px;
    height: 70px;
}

/********** SIDEBAR **********/
.sidebar {
    display: grid;
    grid-area: 1 / 1 / 6 / 2;
    gap: 70px 15px;
    padding: 20px 25px;
    align-content: flex-start;
    background-color: var(--color-curious-blue);
    font-weight: 600;
    color: #fff;
    z-index: 50;
}

/***** LOGO *****/
.logo-wrapper {
    display: grid;
    grid-auto-flow: column;
    gap: 15px;
    align-items: center;
    justify-content: flex-start;
    font-size: clamp(1rem, 1.4vw, 2rem);
}

.logo {
    display: grid;
    gap: 4px;
    width: 40px;
    height: 45px;
    grid-template-areas: repeat(3, 1fr) / 1fr 1fr;
}

.logo * {
    background-color: #fff;
}

.logo *:nth-child(1) {
    grid-area: 1 / 1 / 3 / 2;
}

.logo *:nth-child(2) {
    grid-area: 1 / 2 / 2 / 3;
}

.logo *:nth-child(3) {
    grid-area: 3 / 1 / 4 / 2;
}

.logo *:nth-child(4) {
    grid-area: 2 / 2 / 4 / 3;
}

/***** NAV *****/
.nav__section {
    display: grid;
    gap: 37px 15px;
    font-size: clamp(1rem, 1.1vw, 2rem);
}

.nav__section li {
    display: grid;
    grid-template-columns: 40px auto;
    align-items: center;
    grid-auto-flow: column;
}

.nav__section img {
    filter: invert(100%) sepia(100%) saturate(2%) hue-rotate(242deg) brightness(104%) contrast(101%);
}

/********** HEADER **********/
.header {
    display: grid;
    align-content: space-between;
    padding: 25px 3rem 18px 3rem;
    grid-area: 1 / 2 / 2 / 3;
    background-color: #fff;
    z-index: 40;
    gap: 20px;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
}

.header__upper {
    display: grid;
    align-items: center;
    grid-template-columns: 3fr 1fr;
}

.searchbar {
    display: grid;
    grid-column: 1/ 2;
    grid-template-columns: 30px auto;
    align-items: center;
    width: min(700px, 95%);
}

.searchbar-wrapper {
    height: 27px;
    background-color: var(--color-catskill-white);
    border-radius: 20px;
}

.searchbar-wrapper:focus-within {
    border: 2px solid var(--color-curious-blue);
}

.searchbar__input {
    border: 0;
    background: transparent;
    margin: 0 0 0 10px;
    height: 100%;
    width: calc(100% - 10px);
    outline: none;
}

.user__notifier {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-content: flex-end;
    gap: 25px;
}

.user__notifier__name {
    font-size: clamp(1rem, 1.1vw, 2rem);
}

.header__lower {
    display: grid;
    align-items: center;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
    grid-auto-flow: dense;
}

.user__profile {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-content: flex-start;
    gap: 5px 18px;
}

.user__profile__intro {
    display: grid;
    gap: 7px;
    align-items: center;
}

.user__profile__name {
    font-size: clamp(1.2rem, 1.4vw, 2.2rem);
}

.user__options {
    display: grid;
    grid-auto-flow: column;
    justify-content: flex-end;
    gap: clamp(.5rem, 1vw, 2rem);
}

.user__options button {
    background-color: var(--color-curious-blue);
    border-radius: 23px;
    border: none;
    color: #fff;
    padding: 10px 20px;
    font-weight: 600;
    font-size: clamp(1rem, .7vw, 1.8rem);
}

/****** MAIN ******/
.main {
    display: grid;
    grid-template: repeat(auto-fit, minmax(400px, 1fr)) / minmax(150px, 4fr) minmax(240px, 1fr);
    grid-area: 2 / 2 / 6 / 3;
    gap: 18px;
    padding: 28px 2rem;
    background-color: var(--color-catskill-white);
    overflow-y: auto;
}

.dashboard__label {
    font-size: clamp(1rem, 1.1vw, 2rem);
    font-weight: 500;
    padding: 12px 0;
}

.dashboard__projects {
    grid-area: 1 / 1 / 3 / 2;
}

.project-list {
    display: grid;
    grid-template: repeat(3, minmax(175px, max-content)) / repeat(auto-fit, minmax(250px, 4fr));
    gap: 24px;
}

.project__card {
    height: inherit;
    width: inherit;
    border-radius: 8px;
    border-left: 10px solid var(--color-fuel-yellow);
}

.project__card__inner{
    display: grid;
    grid-template-rows: 4fr 1fr;
    gap: 20px;
    padding: 24px 14px;
}
.project__title{
    font-size: 19px;
}
.project__desc{
    font-size: 15px;
    color:rgb(114, 114, 114);
}
.project__options{
    display: grid;
    grid-auto-flow: column;
    justify-content: flex-end;
    grid-template-columns: repeat(auto-fit, 40px);
}
.project__options img {
    filter: invert(17%) sepia(9%) saturate(18%) hue-rotate(336deg) brightness(100%) contrast(93%);
}
[class$='__card'] {
    display: grid;
    background-color: #fff;
    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.15);
    border-radius: 10px;
}

.dashboard__announcements {
    display: grid;
    grid-template-rows: 1fr 6fr;
    justify-items: flex-start;
    grid-area: 1 / 2 / 2 / 3;
}

.announcement__card {
    display: grid;
    overflow-y: auto;
    padding: 5px 25px;
}

.announcement__title{
    font-weight: 500;
    font-size:  17px;
}

.announcement__desc{
    font-weight: 500;
    padding: 8px 0 0 0;
    font-size:  14px;
    color:rgb(114, 114, 114);
}

.announcement__article{
    padding: 15px 0;
}

.announcement__article:not(:last-child){
    border-bottom: 1px solid rgba(0,0,0,0.1);
}

.dashboard__trending {
    display: grid;
    grid-template-rows: 1fr 6fr;
    grid-area: 2 / 2 / 3 / 3;
}

.trending__card {
    padding: 10px 25px;
    justify-content: flex-start;
    gap: 5px;
}

.trending__item {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-content: center;
    gap: 20px 15px;
}

.trending__user__details {
    display: grid;
    gap: 5px;
}
.trending__user__name, .trending__user__prj{
    font-size: 1.1rem;
}
.trending__user__prj {
    color: #747474;
}

.footer {
    display: none;
    background-color: var(--color-curious-blue);
    color: #fff;
    height: max-content;
    padding: 20px;
    width: 100%;
}

@media screen and (max-width: 744px) {
    .dashboard__announcements, .dashboard__trending, .user__notifier {
        display: none;
    }

    .dashboard__projects {
        grid-area: 1 / 1 / 3 / 3;
    }

    .main {
        grid-template: repeat(auto-fit, minmax(400px, 1fr)) / 1fr;
    }

    .header {
        padding: 1.5rem 1.2rem 1rem 1.2rem;
    }
    .searchbar {
        grid-column: 1/ 3;
    }
    .user__options{
        justify-content: flex-start;
    }
}

@media screen and (max-width: 420px) {
    .layout {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .sidebar {
        gap: 25px;
    }

    .main {
        width: 100%;
        padding: 30px;
    }

    .logo {
        height: 30px;
        width: 24px;
        gap: 3px;
    }

    .footer {
        display: grid;
        align-items: center;
        justify-content: center;
    }

    .footer > ul {
        width: 300px;
        justify-content: space-evenly;
    }

    .nav__section {
        display: flex;
        flex-wrap: wrap;
    }
    .nav__section:nth-child(3) {
        display: none;
    }
}

